# notive-opdracht

./: README.md  pyproject.toml
api/: add_movies.py  main.py  models.py  movie_schedule.py
src/: CMS.db
src/api/: add_data.py  add_movies.py  main.py  models.py  routes.py  scheduler.py
